# vortex-rs-poc

./: Cargo.toml  README.md
examples/: wikipedia.rs  wikipedia.toml  wikipedia2.rs
src/: crawler.rs  lib.rs  print.rs  stats.rs
src/downloader/: mod.rs
src/downloader/middleware/: mod.rs  proxy.rs  user_agent.rs
src/parser/: mod.rs  page.rs
src/pipeline/: mod.rs
src/pipeline/elements/: mod.rs  timestamping.rs
src/scheduler/: mod.rs  queue.rs
src/settings/: custom.rs  default.toml  mod.rs
src/spider/: mod.rs
